--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -7,6 +7,7 @@
         <link href="../../../static/css/style.css" rel="stylesheet">
         <script src="../../../static/js/bootstrap.bundle.min.js"></script>
         <script src="../../../static/js/jquery-3.6.0.min.js"></script>
+        <script src="../../../static/js/jquery.cookie.js"></script>
         <script>
             $(document).ready(function(){
                 $(".card").mouseenter(function(){
