--- a/templates/profile.html
+++ b/templates/profile.html
@@ -59,9 +59,10 @@
             <div id="edit-box" class="edit-box hide-item">
                 <div style="width: 100%; display: flex; justify-content: center; padding-top: 12px;">
                     <a id="upload-head-link" href="#" style="font-size: 25px; color: white;">Upload</a>
-                    <form id="portrait" action="{% url 'portrait' %}" method = "post" enctype="multipart/form-data">
+                    <form id="portrait" action="{% url 'portrait' %}" method = "post" enctype="multipart/form-data" onchange="submit.click()">
                         {% csrf_token %}
                         <input id="upload-head" type="file" style="display: none;">
+                        <button id="submit" type="submit" hidden="hidden"></button>
                     </form>
                 </div>
             </div>
