Finishing upload portrait.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,7 +35,7 @@
                 <div style="padding-right: 10px; display: flex; align-items: center;">
                     <p style="color: white; margin-bottom: 0; font-size: larger; margin-right: 10px;">Hello, {{user.name}}!</p>
                     <div id="user-head-nav" style="overflow: hidden;">
-                        <img src={{ user.portrait }} width="110%" height="110%" style="position: relative; left: -5%; top: -5%;">
+                        <img src="{{ MEDIA_URL }}{{ user.portrait }}" width="110%" height="110%" style="position: relative; left: -5%; top: -5%;">
                     </div>
                     <form id="signupForm" method="post" >
                         <span style="display: none;">{% csrf_token %}</span>
@@ -63,14 +63,18 @@
         <div id="user-head">
             <div id="edit-box" class="edit-box transparent">
                 <div style="width: 100%; display: flex; justify-content: center; padding-top: 12px;">
-                    <a id="upload-head-link" href="#" style="font-size: 25px; color: white;">Upload</a>
-                    <input id="upload-head" type="file" style="display: none;">
+                    <form id="upload" action="/templates/profile.html/" method = "post" enctype="multipart/form-data" onchange="submit.click()">
+                        {% csrf_token %}
+                        <a id="upload-head-link" href="#" style="font-size: 25px; color: white;">Upload</a>
+                        <input id="upload-head" type="file" name="img" style="display: none;">
+                        <button id="submit" type="submit" hidden="hidden"></button>
+                    </form>>
                 </div>
             </div>
 
             <div style="border: #6c757d 2px solid; height: 250px; width: 250px; position: absolute; z-index: -100; top: 30px; border-radius: 50%; overflow: hidden;">
 
-                <img src={{ user.portrait }} height="250px" width="250px">
+                <img src="{{ MEDIA_URL }}{{ user.portrait }}" height="250px" width="250px">
             </div>
             
         </div>
