--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -55,9 +55,9 @@
                     </div>
 
                     <div  style="padding-right: 10px; display: flex; align-items: center;">
-                        <p id="hello-message" class="hide-item" style="color: white; margin-bottom: 0; font-size: larger; margin-right: 10px;">Hello, {{userName}}!</p>
+                        <p id="hello-message" class="hide-item" style="color: white; margin-bottom: 0; font-size: larger; margin-right: 10px;">Hello, {{user.name}}!</p>
                         <div id="user-head-nav" class="hide-item">
-                            <!-- User head image here -->
+                            <img src="{{ MEDIA_URL }}{{ user.portrait }}" width="110%" height="110%" style="position: relative; left: -5%; top: -5%;">
                         </div>
                     </div>
 
