change to profile.html

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -74,9 +74,9 @@
                     </form>
                 </div>
             </div>
-            <div style="height: 250px; width: 250px; position: absolute; z-index: -100; top: 30px; border-radius: 50%; overflow: hidden;">
+            <div style="height: 250px; width: 250px; position: absolute; z-index: -100; top: 30px; border-radius: 50%; overflow: hidden;"></div>
             <div style="border: #6c757d 2px solid; height: 250px; width: 250px; position: absolute; z-index: -100; top: 30px; border-radius: 50%; overflow: hidden;">
-                <img src={{ user.portrait }} height="250px" width="250px">
+                <img src='{{ MEDIA_URL }}{{ user.portrait }}' height="250px" width="250px">
             </div>
             
         </div>
@@ -97,7 +97,7 @@
                 <b>{{userName}}</b>
             </p>
             <a href="#" id="userName-icon" class="transparent" style="pointer-events: none;">
-                <svg xmlns="http://www.w3.org/2000/svg" style="margin-top: 10; margin-left: 10;" width="30" height="30" fill="currentColor" class="bi bi-pencil-square text-primary" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" style="margin-top: 10px; margin-left: 10px;" width="30" height="30" fill="currentColor" class="bi bi-pencil-square text-primary" viewBox="0 0 16 16">
                     <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                     <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
                 </svg>
@@ -122,7 +122,7 @@
                     About Me
                 </p>
                 <a href="#" id="discription-icon" class="transparent" style="pointer-events: none;">
-                    <svg xmlns="http://www.w3.org/2000/svg" style="margin-top: 18; margin-left: 10;" width="20" height="20" fill="currentColor" class="bi bi-pencil-square text-primary" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" style="margin-top: 18px; margin-left: 10px;" width="20" height="20" fill="currentColor" class="bi bi-pencil-square text-primary" viewBox="0 0 16 16">
                         <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                         <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
                     </svg>
@@ -146,8 +146,9 @@
     
     <!-- 用于提交introduction的表格 -->
     <form id="intro">
-        <button id="edit-intro" type="submit" hidden="hidden"></button>
+        <button id="submit-intro" type="submit" hidden="hidden"></button>
     </form>
+    <button id="edit-intro" hidden="hidden"></button>
     <script>
         $("#discription-icon").click(function(){
             $("#edit-intro").click();
