--- a/templates/profile.html
+++ b/templates/profile.html
@@ -148,7 +148,7 @@
     <form id="intro">
         <button id="submit-intro" type="submit" hidden="hidden"></button>
     </form>
-    <button id="edit-intro" hidden="hidden"></button>
+    <button id="edit-intro" hidden="hidden">123</button>
     <script>
         $("#discription-icon").click(function(){
             $("#edit-intro").click();
