--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>CuSell</title>
-        <link href="../../../static/css/bootstrap.min.css" rel="stylesheet">
-        <link href="../../../static/css/style.css" rel="stylesheet">
-        <script src="../../../static/js/bootstrap.bundle.min.js"></script>
-        <script src="../../../static/js/jquery-3.6.0.min.js"></script>
-        <script src="../../../static/js/jquery.cookie.js"></script>
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/css/style.css" rel="stylesheet">
+        <script src="/static/js/bootstrap.bundle.min.js"></script>
+        <script src="/static/js/jquery-3.6.0.min.js"></script>
+        <script src="/static/js/jquery.cookie.js"></script>
 
         <script src="/static/js/jquery.dialog.js"></script>
         <link rel="stylesheet" href="/static/css/dialog.css">
@@ -29,7 +29,7 @@
             <nav class="navbar-dark fixed-top bg-dark" style="border-radius: 0 0 10px 10px;">
                 <div class="navigator">
                     <div style="display: flex;">
-                        <img src="../../../static/pic/CuSell_icon.jpeg" alt="Icon" height="30px" width="30px" style="margin-top: 4.5px; margin-left: 10px; margin-right: 3px; border-radius: 5px;">
+                        <img src="/static/pic/CuSell_icon.jpeg" alt="Icon" height="30px" width="30px" style="margin-top: 4.5px; margin-left: 10px; margin-right: 3px; border-radius: 5px;">
                         <a class="navbar-brand" href="/templates/mainpage.html" style="padding-top: 2px; padding-bottom: 0;">
                             <b><span style="color: purple; font-size: x-large;">Cu</span><span style="color: orange; font-size: x-large;">Sell</span></b>
                         </a>
@@ -116,7 +116,7 @@
                         </svg>
                     </div>
                     <div class="first-layer">
-                        <img src="../../../static/pic/CuSell_icon.jpeg" alt="Icon">
+                        <img src="/static/pic/CuSell_icon.jpeg" alt="Icon">
                     </div>
                     <div class="second-layer"></div>
                     <div class="third-layer">
@@ -125,11 +125,11 @@
                         </svg>
                     </div>
                     <div class="forth-layer">
-                    <img src="../../../static/pic/CuSell_icon.png" alt="#">
+                    <img src="/static/pic/CuSell_icon.png" alt="#">
                     </div>
                 </div>
             </div>
-            <img class="cu_img" src="../../../static/pic/CuSell.png" alt="CuSell" height="200px" width="400px">
+            <img class="cu_img" src="/static/pic/CuSell.png" alt="CuSell" height="200px" width="400px">
         </div>
         
         <div class="container">
