Change the error content

--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -219,7 +219,7 @@
                     title: 'Error!',
                     withNoMinWidth: true,
                     width: '400px',
-                    content: error,
+                    content: 'You have not logged in, please log in.',
                     button: {
                         confirm: 'Login',
                         cancel: 'Cancel'
