--- a/templates/login.html
+++ b/templates/login.html
@@ -100,7 +100,7 @@
                     </div>
                     <label for="inputPassword" class="form-label" style="margin: 0; padding: 0; margin-top: 10px;">Password</label>
                         <span style="display: none;">{% csrf_token %}</span>
-                        <button name="forget_button" value="True" type="submit" class="btn btn-link" style="padding: 0; margin-left: 5px;">Forget?</button>
+                        <button name="forget_button" type="button" class="btn btn-link" style="padding: 0; margin-left: 5px;">Forget ?</button>
                     <div class="input-group mb-2">
                         <span class="input-group-text">
                             <svg xmlns="http://www.w3.org/2000/svg" color="gray" width="24" height="24" fill="currentColor" class="bi bi-shield-lock" viewBox="0 0 16 16">
