--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,6 +65,7 @@ nav .navigator{
 .container .bg .card{
   width: 100%;
   height: 100%;
+  overflow: hidden;
   margin-top: 80px;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
@@ -306,4 +307,17 @@ nav .navigator{
   position: relative;
   top: 70%;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.upload-imgs {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 15px;
+  border-left: rgba(128, 128, 128, 0.3) 2px solid;
+  border-top: rgba(128, 128, 128, 0.3) 2px solid;
+  overflow: hidden;
+  background-color: white;
 }
