--- a/templates/profile.html
+++ b/templates/profile.html
@@ -29,7 +29,7 @@
                                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                             </svg>
                             Profile</a></li>
-                        <li><a href="#" class="nav-link px-2 text-white top_item">Post</a></li>
+                        <li><a href="/templates/post.html" class="nav-link px-2 text-white top_item">Post</a></li>
                         <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>
                         <li><a target="_blank" href="https://github.com/1155141394/CuSell" class="nav-link px-2 text-white top_item">About Us</a></li>
                     </ul>
