--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -51,7 +51,7 @@
                                     }
                                 });
                             </script> -->
-                            <li><a href="/templates/post.html" class="nav-link px-2 text-white top_item">Post</a></li>
+                            <li><a id="post" href="#" class="nav-link px-2 text-white top_item">Post</a></li>
                             <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>
                             <li><a target="_blank" href="https://github.com/1155141394/CuSell" class="nav-link px-2 text-white top_item">About Us</a></li>
                         </ul>
@@ -238,6 +238,14 @@
             $("#profile").click(function(){
                 if (userStatus=="True") {
                     window.open('/templates/profile.html', '_self')
+                } else {
+                    $("#show-error").click()
+                };
+            });
+
+            $("#post").click(function(){
+                if (userStatus=="True") {
+                    window.open('/templates/post.html', '_self')
                 } else {
                     $("#show-error").click()
                 };
